# ESP_MESS_2025

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
DOCS/: ESP32-C3.md  ESP32-C6.md  Encyption.md  GPIOs.md  GPS.md  Pins_Layout.md  SPI.md
DOCS/Wireless/: LPWAN.md  SubMhz.md
components/app_gpio/: CMakeLists.txt  led_fade.h  led_toggle.h
components/app_mbedtls/: CMakeLists.txt  app_mbedtls.c  app_mbedtls.h
components/app_ssd1306/: CMakeLists.txt  app_ssd1306.c  app_ssd1306.h
components/button_driver/: CMakeLists.txt  button_click.c  button_click.h
components/cdc_driver/: CMakeLists.txt  cdc_driver.c  cdc_driver.h
components/espNow_driver/: CMakeLists.txt  espNow_driver.c  espNow_driver.h
components/esp_console/: CMakeLists.txt  esp_console.h
components/espnow/: CMakeLists.txt  espnow_controller.c  espnow_controller.h  espnow_driver.c  espnow_driver.h
components/i2c/: CMakeLists.txt
components/led_driver/: CMakeLists.txt  led_fade.c  led_fade.h  led_toggle.c  led_toggle.h
components/littlefs_driver/: CMakeLists.txt  littlefs_driver.c  littlefs_driver.h
components/mod_adc/: CMakeLists.txt  mod_adc.c  mod_adc.h
components/mod_audio/: CMakeLists.txt  mod_audio.c  mod_audio.h
components/mod_bluetooth/: CMakeLists.txt  common.h  idf_component.yml  mod_BLEGap.c  mod_BLEGap.h  mod_BLEGatt.c  mod_BLEScan.c  mod_BLEScan.h  mod_BLEScan_helper.c  mod_BLEScan_helper.h  mod_nimBLE.c  mod_nimBLE.h  mod_nimBLE_beacon.c  mod_nimBLE_beacon.h  mod_nimBLE_service.c  mod_nimBLE_service.h
components/mod_bluetooth/BLEGap/: mod_BLEGap.c  mod_BLEGap.h
components/mod_bluetooth/BLEGatt/: mod_BLEGatt.c  mod_BLEGatt.h
components/mod_bluetooth/GattHtp/: mod_GattHtp.c  mod_GattHtp.h
components/mod_button/: CMakeLists.txt  mod_button.c  mod_button.h
components/mod_epaper/: CMakeLists.txt  mod_epaper.c  mod_epaper.h
components/mod_espnow/: CMakeLists.txt  mod_espnow.c  mod_espnow.h
components/mod_gpio/: CMakeLists.txt  led_fade.c  led_toggle.c  mod_gpio.c
components/mod_i2c/: CMakeLists.txt  mod_i2c.c  mod_i2c.h
components/mod_i2s/: CMakeLists.txt  mod_i2s.c  mod_i2s.h
components/mod_lora/: CMakeLists.txt
components/mod_mbedtls/: CMakeLists.txt  mod_mbedtls.c  mod_mbedtls.h
components/mod_nvs/: CMakeLists.txt  mod_nvs.c  mod_nvs.h
components/mod_rotary/: CMakeLists.txt  mod_rotary.c  mod_rotary.h
components/mod_sd/: CMakeLists.txt  mod_sd.c  mod_sd.h
components/mod_spi/: CMakeLists.txt  mod_spi.c  mod_spi.h
components/mod_ssd1306/: CMakeLists.txt  mod_ssd1306.c  mod_ssd1306.h  ssd1306_bitmap.c  ssd1306_bitmap.h  ssd1306_plot.c  ssd1306_plot.h  ssd1306_segment.c  ssd1306_segment.h
components/mod_st7735/: CMakeLists.txt  mod_st7735.c  mod_st7735.h  st7735_shape.c  st7735_shape.h
components/mod_system/: CMakeLists.txt
components/mod_uart/: CMakeLists.txt  mod_uart.c  mod_uart.h
components/mod_utility/: CMakeLists.txt  cycle_sequence.h  mod_bitmap.c  mod_bitmap.h  mod_utility.c  mod_utility.h  timer_pulse.c  util_shared.h
components/mod_wifi/: CMakeLists.txt  mod_wifi.c  mod_wifi.h  mod_wifi_nan.c
components/mod_wifi/http/: http.c  http.h
components/mod_wifi/ntp/: ntp.c
components/mod_wifi/tcp_socket/: tcp_socket.c  tcp_socket.h
components/mod_wifi/udp_socket/: udp_socket.c
components/mod_wifi/web_socket/: web_socket.c  web_socket.h
components/mod_ws2812/: CMakeLists.txt  color_helper.h  mod_ws2812.c  mod_ws2812.h
components/rotary_driver/: CMakeLists.txt  rotary_driver.c  rotary_driver.h
components/storage/: CMakeLists.txt  storage_sd.c  storage_sd.h
components/uart_controller/: CMakeLists.txt  uart_controller.c  uart_controller.h
components/uart_driver/: CMakeLists.txt  uart_driver.c  uart_driver.h
components/wifi/: CMakeLists.txt  ntp.c  ntp.h  tcp.c  tcp.h  tcp_socket.h  udp.c  udp.h  wifi.c  wifi.h
components/wifi/http/: http.c  http.h
components/wifi/ntp/: ntp.h
components/wifi/tcp_socket/: tcp_socket.c  tcp_socket.h
components/wifi/udp_socket/: udp_socket.c  udp_socket.h
components/wifi_nan/: CMakeLists.txt  wifi_nan.c  wifi_nan.h
components/ws2812/: CMakeLists.txt  color_helper.c  color_helper.h  ws2812.c  ws2812.h
components/ztimer_helper/: CMakeLists.txt  cycle_sequence.c  cycle_sequence.h  serv_cycleIndex.c  serv_cycleIndex.h  timer_pulse.c  timer_pulse.h
documents/: ESP32.md
flash_data/: example.txt
flash_data/devices/: 7C-9E-BD-46-3D-60.text  7C-9E-BD-46-46-60.text  84-CC-A8-7F-2D-68.text
main/: CMakeLists.txt  Kconfig.projbuild  dev_config_copy.h  idf_component.yml  main.c  main.h  my_littlefs.c  my_littlefs.h
main/app_network/: app_BLE.c  app_BLE.h  app_network.c  app_network.h
main/behavior/: behavior.c  behavior.h
main/console/: app_console.c  app_console.h  base_console.c  mod_console.c  mod_console.h
main/console/cmd_espnow/: cmd_espnow.c  cmd_espnow.h
main/console/cmd_nvs/: cmd_nvs.c  cmd_nvs.h
main/console/cmd_system/: cmd_system.c  cmd_system.h  cmd_system_sleep.c  cmd_system_sleep.h
main/console/cmd_wifi/: cmd_wifi.c
main/devices/: app_serial.c  app_serial.h
main/devices/display/: display.c  display.h
main/devices/gpio/: app_gpio.c  app_gpio.h
main/devices/i2c/: app_i2c.c  app_i2c.h  sensors.c  sensors.h
main/devices/spi/: spi_devices.c  spi_devices.h
main/display/: display.c  display.h
main/littlefs/: littlefs.c  littlefs.h
main/modbus/: modbus.c  modbus.h
main/sx127x/: esp_utils.c  esp_utils.h  mod_sx127x.c  mod_sx127x.h  sx127x.c
